--- a/.github/workflows/request_infra.yml
+++ b/.github/workflows/request_infra.yml
@@ -35,7 +35,12 @@ jobs:
           labels=$(echo '${{ toJson(github.event.issue.labels) }}' | jq -r '.[] | select(.name | startswith("issueops:")) | .name')
           if [ -n "$labels" ]; then
             echo "Label found: $labels"
-            echo "TF_WORKDIR=terraform/$labels" >> $GITHUB_ENV  
+
+            # label without issueops: prefix
+            infra_type=$(echo $labels | sed 's/issueops://')
+
+            echo "TF_WORKDIR=terraform/$infra_type" >> $GITHUB_ENV 
+            echo "INFRA_TYPE=$infra_type" >> $GITHUB_ENV
           else
             echo "No label found starting with 'palabra'"
           fi
@@ -44,7 +49,8 @@ jobs:
       uses: issue-ops/parser@v4.0.0
       with:
         body: ${{ github.event.issue.body }}
-        issue-form-template	: create_azure_infra_form.yml
+        # issue-form-template	: create_azure_infra_form.yml
+        issue-form-template: ${{ env.INFRA_TYPE }}_form.yml
         workspace: ${{ github.workspace }}
     
     - name: Output Issue JSON
@@ -55,7 +61,8 @@ jobs:
       id: validate-issue
       uses: issue-ops/validator@v3.0.0
       with:
-        issue-form-template: create_azure_infra_form.yml
+        # issue-form-template: create_azure_infra_form.yml
+        issue-form-template: ${{ env.INFRA_TYPE }}_form.yml
         parsed-issue-body: ${{ steps.parser.outputs.json }}
         workspace: ${{ github.workspace }}
 
