Set working directory in GitHub Actions workflow for Terraform formatting

--- a/.github/workflows/request_infra.yml
+++ b/.github/workflows/request_infra.yml
@@ -75,6 +75,7 @@ jobs:
         pwd
         cat terraform.tfvars
         terraform fmt
+      working-directory: ${{ env.TF_WORKDIR }}
 
     - name: Add Labels
       id: add-labels
