Add VS Code extensions and update GitHub Actions workflows for dynamic working directory

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,5 +11,15 @@
 		"ghcr.io/devcontainers/features/azure-cli:1": {
 			"version": "latest"
 		}
+	},
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"redhat.vscode-yaml",
+				"GitHub.copilot",
+				"GitHub.copilot-chat",
+				"hashicorp.terraform"
+			]
+		}
 	}
 }
