--- a/.github/ISSUE_TEMPLATE/web_form.yml
+++ b/.github/ISSUE_TEMPLATE/web_form.yml
@@ -29,7 +29,7 @@ body:
     id: region
     attributes:
       label: Region
-      multiple: true
+      multiple: false
       options:
         - spaincentral
         - francecentral
