--- a/.github/workflows/destroy_infra.yml
+++ b/.github/workflows/destroy_infra.yml
@@ -58,6 +58,7 @@ jobs:
           -backend-config="container_name=${{ secrets.TF_STATE_CONTAINER_NAME }}" \
           -backend-config="key=issue-${{ github.event.issue.number }}-terraform.tfstate" \
           -backend-config="access_key=${{ secrets.TF_STATE_STORAGE_ACCESS_KEY }}"
+        working-directory: ${{ env.TF_WORKDIR }}
 
 
       - name: Terraform output as JSON
@@ -67,6 +68,7 @@ jobs:
         run: |
           terraform output -json | jq -r 'to_entries | map("\(.key) = \(.value.value | @json)") | .[]'
           terraform output -json | jq -r 'to_entries | map("\(.key) = \(.value.value | @json)") | .[]'  > terraform.tfvars
+        working-directory: ${{ env.TF_WORKDIR }}
        
       - name: Check the content of the terraform.tfvars file
         run: cat terraform.tfvars
@@ -75,6 +77,7 @@ jobs:
         run: |
           terraform destroy -auto-approve \
           -var="subscription_id=${{ secrets.TF_SUBSCRIPTION_ID }}"
+        working-directory: ${{ env.TF_WORKDIR }}
 
       - name: Remove Labels
         id: remove-labels
