Set working directory for Terraform commands in destroy_infra workflow

--- a/.github/workflows/destroy_infra.yml
+++ b/.github/workflows/destroy_infra.yml
@@ -72,6 +72,7 @@ jobs:
        
       - name: Check the content of the terraform.tfvars file
         run: cat terraform.tfvars
+        working-directory: ${{ env.TF_WORKDIR }}
 
       - name: Terraform Destroy 🧨
         run: |
