--- a/.github/workflows/deploy_infra.yml
+++ b/.github/workflows/deploy_infra.yml
@@ -10,6 +10,8 @@ env:
   ARM_CLIENT_ID: ${{ secrets.TF_CLIENT_ID }}
   ARM_CLIENT_SECRET: ${{ secrets.TF_CLIENT_SECRET }}
   ARM_TENANT_ID: ${{ secrets.TF_TENANT_ID }}
+  PROJECT_NUMBER: 8
+  ORG_NAME: returngis
 
 concurrency:
   group: ${{ github.event.issue.number }}
@@ -119,4 +121,32 @@ jobs:
         issue_number: ${{ github.event.issue.number }}
         labels: |
           deployed 🚀✅
+
+    - name: Check issues in a project
+      run: |
+
+        # gh project view 8 --owner returngis
+        gh project view ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }}
+
+        # gh project view 8 --owner returngis --format json -q '.id'
+        PROJECT_ID=$(gh project view ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq .id)
+
+        # gh project item-list 8 --owner returngis
+        gh project item-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }}
+
+        # gh project item-list 8 --format json --owner returngis --jq '.items[] | select(.content.number == 10)'
+        PROJECT_ITEM=$(gh project item-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq '.items[] | select(.content.number == ${{ github.event.issue.number }})')
+
+        PROJECT_ITEM_ID=$(echo $PROJECT_ITEM | jq .id)
+
+        echo "Project ID: $PROJECT_ID"
+
+        echo "Change to Deployed"
+
+        # gh project item-edit --id PVTI_lADOA9pFl84AtAnvzgVFbag  --field-id "Status" --text "Deployed 🚀" --project-id PVT_kwDOA9pFl84AtAnv
+        gh project item-edit --id $PROJECT_ITEM_ID --field-id "Status" --text "Deployed 🚀" --project-id $PROJECT_ID
+
+            
+    
+    
           
