--- a/.github/workflows/deploy_infra.yml
+++ b/.github/workflows/deploy_infra.yml
@@ -122,7 +122,7 @@ jobs:
         labels: |
           deployed 🚀✅
 
-    - name: Check issues in a project
+    - name: Change the status to Deployed 🚀
       run: |
 
         # gh project view 8 --owner returngis
