--- a/.github/workflows/deploy_infra.yml
+++ b/.github/workflows/deploy_infra.yml
@@ -21,7 +21,7 @@ permissions:
   contents: read
   issues: write
   actions: read
-  projects: write
+  repository-projects: write
 
 jobs:
   deploy_infra:
