Update deploy_infra workflow: modify permissions to write-all and comment out specific permissions

--- a/.github/workflows/deploy_infra.yml
+++ b/.github/workflows/deploy_infra.yml
@@ -18,11 +18,11 @@ concurrency:
   cancel-in-progress: true
 
 permissions:
-  contents: read
-  issues: write
-  actions: read
-  repository-projects: write
-  project: read
+  # contents: read
+  # issues: write
+  # actions: read
+  # repository-projects: write  
+  permissions: write-all
 
 jobs:
   deploy_infra:
