Update deploy_infra workflow: add step to check and echo issue number

--- a/.github/workflows/deploy_infra.yml
+++ b/.github/workflows/deploy_infra.yml
@@ -129,6 +129,9 @@ jobs:
         app-id: ${{ secrets.ISSUE_OPS_APP_ID }}
         private-key: ${{ secrets.ISSUE_OPS_APP_PEM }}
     
+
+    - name: Check issue number
+      run: echo "Issue number: ${{ github.event.issue.number }}"
     
     - name: Change the status to Deployed 🚀
       run: |
