Update deploy_infra workflow: format echo command for issue number check

--- a/.github/workflows/deploy_infra.yml
+++ b/.github/workflows/deploy_infra.yml
@@ -131,7 +131,8 @@ jobs:
     
 
     - name: Check issue number
-      run: echo "Issue number: ${{ github.event.issue.number }}"
+      run: |
+        echo "Issue number: ${{ github.event.issue.number }}"
     
     - name: Change the status to Deployed 🚀
       run: |
