--- a/.github/workflows/deploy_infra.yml
+++ b/.github/workflows/deploy_infra.yml
@@ -134,35 +134,76 @@ jobs:
       run: |
         echo "Issue number: ${{ github.event.issue.number }}"
     
-    - name: Change the status to Deployed 🚀
+    - name: Get the project ID and put as an output
+      id: project_id
       run: |
-
-        # gh project list --owner returngis
-        # gh project list --owner ${{ env.ORG_NAME }}
-
-        # gh project view 8 --owner returngis
-        # gh project view ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }}
-
-        # gh project view 8 --owner returngis --format json -q '.id'
         PROJECT_ID=$(gh project view ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq .id)
-
-        # gh project item-list 8 --owner returngis
-        # gh project item-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }}
-
-        # gh project item-list 8 --format json --owner returngis --jq '.items[] | select(.content.number == 15) | .id'
-        PROJECT_ITEM_ID=$(gh project item-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq '.items[] | select(.content.number == ${{ github.event.issue.number }})' | jq .id)        
-
-        # gh project field-list 8 --owner returngis --format json | jq '.fields[] | select(.name == "Status") | .id'
-        STATUS_FIELD_ID=$(gh project field-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq '.fields[] | select(.name == "Status") | .id')
-
-        echo "Project ID: $PROJECT_ID"
-        echo "Project Item ID: $PROJECT_ITEM_ID"
-        echo "Status Field ID: $STATUS_FIELD_ID"
-
-        echo "Change to Deployed"
-
-        # gh project item-edit --id PVTI_lADOA9pFl84AtAnvzgVGAeQ  --field-id "Status" --text "Deployed 🚀" --project-id PVT_kwDOA9pFl84AtAnv
-        gh project item-edit --id $PROJECT_ITEM_ID --field-id $STATUS_FIELD_ID --text "Deployed 🚀" --project-id $PROJECT_ID
-
+        echo "::set-output name=project_id::$PROJECT_ID"
       env:
         GH_TOKEN: ${{ steps.generate-token.outputs.token }}
+
+
+    - name: Get the project item ID and put as an output
+      id: project_item_id
+      run: |
+        PROJECT_ITEM_ID=$(gh project item-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq '.items[] | select(.content.number == ${{ github.event.issue.number }} )' | jq .id)
+        echo "::set-output name=project_item_id::$PROJECT_ITEM_ID"
+      env:
+        GH_TOKEN: ${{ steps.generate-token.outputs.token }}
+
+    
+    - name : Get the status field ID and put as an output
+      id: status_field_id
+      run: |
+        STATUS_FIELD_ID=$(gh project field-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq '.fields[] | select(.name == "Status") | .id')
+        echo "::set-output name=status_field_id::$STATUS_FIELD_ID"
+      env:
+        GH_TOKEN: ${{ steps.generate-token.outputs.token }}
+
+    - name: Check values
+      run: |
+        echo "Project ID: ${{ steps.project_id.outputs.project_id }}"
+        echo "Project Item ID: ${{ steps.project_item_id.outputs.project_item_id }}"
+        echo "Status Field ID: ${{ steps.status_field_id.outputs.status_field_id }}"
+
+    - name: Change the status to Deployed 🚀
+      run: |
+        gh project item-edit --id ${{ steps.project_item_id.outputs.project_item_id }} --field-id ${{ steps.status_field_id.outputs.status_field_id }} --text "Deployed 🚀" --project-id ${{ steps.project_id.outputs.project_id }}
+      env:
+        GH_TOKEN: ${{ steps.generate-token.outputs.token }}
+
+    
+        
+    
+    # - name: Change the status to Deployed 🚀
+    #   run: |
+
+    #     # gh project list --owner returngis
+    #     # gh project list --owner ${{ env.ORG_NAME }}
+
+    #     # gh project view 8 --owner returngis
+    #     # gh project view ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }}
+
+    #     # gh project view 8 --owner returngis --format json -q '.id'
+    #     PROJECT_ID=$(gh project view ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq .id)
+
+    #     # gh project item-list 8 --owner returngis
+    #     # gh project item-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }}
+
+    #     # gh project item-list 8 --format json --owner returngis --jq '.items[] | select(.content.number == 22) | .id'
+    #     PROJECT_ITEM_ID=$(gh project item-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq '.items[] | select(.content.number == ${{ github.event.issue.number }} )' | jq .id)        
+
+    #     # gh project field-list 8 --owner returngis --format json | jq '.fields[] | select(.name == "Status") | .id'
+    #     STATUS_FIELD_ID=$(gh project field-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq '.fields[] | select(.name == "Status") | .id')
+
+    #     echo "Project ID: $PROJECT_ID"
+    #     echo "Project Item ID: $PROJECT_ITEM_ID"
+    #     echo "Status Field ID: $STATUS_FIELD_ID"
+
+    #     echo "Change to Deployed"
+
+    #     # gh project item-edit --id PVTI_lADOA9pFl84AtAnvzgVGAeQ  --field-id "Status" --text "Deployed 🚀" --project-id PVT_kwDOA9pFl84AtAnv
+    #     gh project item-edit --id $PROJECT_ITEM_ID --field-id $STATUS_FIELD_ID --text "Deployed 🚀" --project-id $PROJECT_ID
+
+    #   env:
+    #     GH_TOKEN: ${{ steps.generate-token.outputs.token }}
