--- a/.github/workflows/deploy_infra.yml
+++ b/.github/workflows/deploy_infra.yml
@@ -146,7 +146,7 @@ jobs:
     - name: Get the project item ID and put as an output
       id: project_item_id
       run: |
-        PROJECT_ITEM_ID=$(gh project item-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq '.items[] | select(.content.number == ${{ github.event.issue.number }} )' | jq .id)
+        PROJECT_ITEM_ID=$(gh project item-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq '.items[] | select(.content.number == ${{ github.event.issue.number }} ) | jq .id')
         echo "::set-output name=project_item_id::$PROJECT_ITEM_ID"
       env:
         GH_TOKEN: ${{ steps.generate-token.outputs.token }}
