--- a/.github/workflows/deploy_infra.yml
+++ b/.github/workflows/deploy_infra.yml
@@ -146,8 +146,8 @@ jobs:
     - name: Get the project item ID and put as an output
       id: project_item_id
       run: |
-        PROJECT_ITEM_ID=$(gh project item-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq '.items[] | select(.content.number == ${{ github.event.issue.number }} ) | jq .id')
-        echo "::set-output name=project_item_id::$PROJECT_ITEM_ID"
+        ISSUE_IN_PROJECT_ID=$(gh project item-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq '.items[] | select(.content.number == ${{ github.event.issue.number }} ) | jq .id')
+        echo "::set-output name=project_item_id::$ISSUE_IN_PROJECT_ID"
       env:
         GH_TOKEN: ${{ steps.generate-token.outputs.token }}
 
@@ -171,39 +171,3 @@ jobs:
         gh project item-edit --id ${{ steps.project_item_id.outputs.project_item_id }} --field-id ${{ steps.status_field_id.outputs.status_field_id }} --text "Deployed 🚀" --project-id ${{ steps.project_id.outputs.project_id }}
       env:
         GH_TOKEN: ${{ steps.generate-token.outputs.token }}
-
-    
-        
-    
-    # - name: Change the status to Deployed 🚀
-    #   run: |
-
-    #     # gh project list --owner returngis
-    #     # gh project list --owner ${{ env.ORG_NAME }}
-
-    #     # gh project view 8 --owner returngis
-    #     # gh project view ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }}
-
-    #     # gh project view 8 --owner returngis --format json -q '.id'
-    #     PROJECT_ID=$(gh project view ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq .id)
-
-    #     # gh project item-list 8 --owner returngis
-    #     # gh project item-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }}
-
-    #     # gh project item-list 8 --format json --owner returngis --jq '.items[] | select(.content.number == 22) | .id'
-    #     PROJECT_ITEM_ID=$(gh project item-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq '.items[] | select(.content.number == ${{ github.event.issue.number }} )' | jq .id)        
-
-    #     # gh project field-list 8 --owner returngis --format json | jq '.fields[] | select(.name == "Status") | .id'
-    #     STATUS_FIELD_ID=$(gh project field-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq '.fields[] | select(.name == "Status") | .id')
-
-    #     echo "Project ID: $PROJECT_ID"
-    #     echo "Project Item ID: $PROJECT_ITEM_ID"
-    #     echo "Status Field ID: $STATUS_FIELD_ID"
-
-    #     echo "Change to Deployed"
-
-    #     # gh project item-edit --id PVTI_lADOA9pFl84AtAnvzgVGAeQ  --field-id "Status" --text "Deployed 🚀" --project-id PVT_kwDOA9pFl84AtAnv
-    #     gh project item-edit --id $PROJECT_ITEM_ID --field-id $STATUS_FIELD_ID --text "Deployed 🚀" --project-id $PROJECT_ID
-
-    #   env:
-    #     GH_TOKEN: ${{ steps.generate-token.outputs.token }}
