Update deploy_infra workflow: simplify command to check project issues by removing unnecessary output formatting

--- a/.github/workflows/deploy_infra.yml
+++ b/.github/workflows/deploy_infra.yml
@@ -144,7 +144,7 @@ jobs:
 
     - name: Check issue in the project
       run: |
-        gh project item-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq '.items[]'
+        gh project item-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json
       env:
         GH_TOKEN: ${{ steps.generate-token.outputs.token }}
 
