Enhance deploy_infra workflow: add project item ID retrieval and support for issue and pull request numbers

--- a/.github/workflows/deploy_infra.yml
+++ b/.github/workflows/deploy_infra.yml
@@ -152,11 +152,17 @@ jobs:
         {
           organization(login: "returngis") {
             projectV2(number: 8) {
+              id
               items(first: 100) {
                 nodes {
                   id
                   content {
-                    number
+                    ... on Issue {
+                      number
+                    }
+                    ... on PullRequest {
+                      number
+                    }
                   }
                 }
               }
