--- a/.github/workflows/deploy_infra.yml
+++ b/.github/workflows/deploy_infra.yml
@@ -130,107 +130,111 @@ jobs:
         private-key: ${{ secrets.ISSUE_OPS_APP_PEM }}
     
 
-    - name: Get project ID using GraphQL
-      run: |
-        query='
-        {
-          organization(login: "returngis") {
-            projectV2(number: 8) {
-              id
-            }
-          }
-        }'
-        response=$(gh api graphql -f query="$query")
-        project_id=$(echo "$response" | jq -r '.data.organization.projectV2.id')
-        echo "Project ID: $project_id"
-      env:
-        GH_TOKEN: ${{ steps.generate-token.outputs.token }}
+    # - name: Get project ID using GraphQL
+    #   run: |
+    #     query='
+    #     {
+    #       organization(login: "returngis") {
+    #         projectV2(number: 8) {
+    #           id
+    #         }
+    #       }
+    #     }'
+    #     response=$(gh api graphql -f query="$query")
+    #     project_id=$(echo "$response" | jq -r '.data.organization.projectV2.id')
+    #     echo "Project ID: $project_id"
+    #   env:
+    #     GH_TOKEN: ${{ steps.generate-token.outputs.token }}
 
-    - name: Get the project item ID using GraphQL
-      run: |
-        query='
-        {
-          organization(login: "returngis") {
-            projectV2(number: 8) {
-              id
-              items(first: 100) {
-                nodes {
-                  id
-                  content {
-                    ... on Issue {
-                      number
-                    }
-                    ... on PullRequest {
-                      number
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }'
-        # response=$(gh api graphql -f query="$query")
-        # project_item_id=$(echo "$response" | jq -r '.data.organization.projectV2.items.nodes[] | select(.content.number == ${{ github.event.issue.number }}) | .id')
-        # echo "Project Item ID: $project_item_id"
+    # - name: Get the project item ID using GraphQL
+    #   run: |
+    #     query='
+    #     {
+    #       organization(login: "returngis") {
+    #         projectV2(number: 8) {
+    #           id
+    #           items(first: 100) {
+    #             nodes {
+    #               id
+    #               content {
+    #                 ... on Issue {
+    #                   number
+    #                 }
+    #                 ... on PullRequest {
+    #                   number
+    #                 }
+    #               }
+    #             }
+    #           }
+    #         }
+    #       }
+    #     }'
+    #     # response=$(gh api graphql -f query="$query")
+    #     # project_item_id=$(echo "$response" | jq -r '.data.organization.projectV2.items.nodes[] | select(.content.number == ${{ github.event.issue.number }}) | .id')
+    #     # echo "Project Item ID: $project_item_id"
 
-        response=$(gh api graphql -f query="$query")
-        echo $response
+    #     response=$(gh api graphql -f query="$query")
+    #     echo $response
 
-      env:
-        GH_TOKEN: ${{ steps.generate-token.outputs.token }}
+    #   env:
+    #     GH_TOKEN: ${{ steps.generate-token.outputs.token }}
 
 
     # - name: Check issue number
     #   run: |
     #     echo "Issue number: ${{ github.event.issue.number }}"
     
-    # - name: Get the project ID and put as an output
-    #   id: project_id
-    #   run: |
-    #     PROJECT_ID=$(gh project view ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq .id)
-    #     echo "::set-output name=project_id::$PROJECT_ID"
-    #   env:
-    #     GH_TOKEN: ${{ steps.generate-token.outputs.token }}
+    - name: Get the project ID and put as an output
+      id: project_id
+      run: |
+        PROJECT_ID=$(gh project view ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq .id)
+        echo "::set-output name=project_id::$PROJECT_ID"
+      env:
+        GH_TOKEN: ${{ steps.generate-token.outputs.token }}
 
-    # - name: Check issue in the project
-    #   run: |
-    #     gh project item-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json
-    #   env:
-    #     GH_TOKEN: ${{ steps.generate-token.outputs.token }}
-
-
-    # - name: See issue number ${{ github.event.issue.number }}
-    #   run: |
-    #      gh project item-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq '.items[] | select(.content.number == ${{ github.event.issue.number }})'
-    #   env:
-    #     GH_TOKEN: ${{ steps.generate-token.outputs.token }}
+    - name: Check issue in the project
+      run: |
+        gh project item-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json
+      env:
+        GH_TOKEN: ${{ steps.generate-token.outputs.token }}
 
 
-    # - name: Get the project item ID and put as an output
-    #   id: project_item_id
-    #   run: |       
-    #     ISSUE_IN_PROJECT_ID=$(gh project item-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq '.items[] | select(.content.number == ${{ github.event.issue.number }})' | jq .id)
-    #     echo "::set-output name=project_item_id::$ISSUE_IN_PROJECT_ID"
-    #   env:
-    #     GH_TOKEN: ${{ steps.generate-token.outputs.token }}
+    - name: See issue number ${{ github.event.issue.number }}
+      run: |
+         gh project item-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq '.items[] | select(.content.number == ${{ github.event.issue.number }})'
+      env:
+        GH_TOKEN: ${{ steps.generate-token.outputs.token }}
+
+
+    - name: Get the project item ID and put as an output
+      id: project_item_id
+      run: |       
+        ISSUE_IN_PROJECT_ID=$(gh project item-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq '.items[] | select(.content.number == ${{ github.event.issue.number }})' | jq .id)
+        echo "::set-output name=project_item_id::$ISSUE_IN_PROJECT_ID"
+      env:
+        GH_TOKEN: ${{ steps.generate-token.outputs.token }}
 
     
-    # - name : Get the status field ID and put as an output
-    #   id: status_field_id
-    #   run: |
-    #     STATUS_FIELD_ID=$(gh project field-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq '.fields[] | select(.name == "Status") | .id')
-    #     echo "::set-output name=status_field_id::$STATUS_FIELD_ID"
-    #   env:
-    #     GH_TOKEN: ${{ steps.generate-token.outputs.token }}
+    - name : Get the status field ID and put as an output
+      id: status_field_id
+      run: |
+        STATUS_FIELD_ID=$(gh project field-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq '.fields[] | select(.name == "Status") | .id')
+        echo "::set-output name=status_field_id::$STATUS_FIELD_ID"
+      env:
+        GH_TOKEN: ${{ steps.generate-token.outputs.token }}
 
-    # - name: Check values
-    #   run: |
-    #     echo "Project ID: ${{ steps.project_id.outputs.project_id }}"
-    #     echo "Project Item ID: ${{ steps.project_item_id.outputs.project_item_id }}"
-    #     echo "Status Field ID: ${{ steps.status_field_id.outputs.status_field_id }}"
+    - name: Check values
+      run: |
+        echo "Project ID: ${{ steps.project_id.outputs.project_id }}"
+        echo "Project Item ID: ${{ steps.project_item_id.outputs.project_item_id }}"
+        echo "Status Field ID: ${{ steps.status_field_id.outputs.status_field_id }}"
 
-    # - name: Change the status to Deployed 🚀
-    #   run: |
-    #     gh project item-edit --id ${{ steps.project_item_id.outputs.project_item_id }} --field-id ${{ steps.status_field_id.outputs.status_field_id }} --text "Deployed 🚀" --project-id ${{ steps.project_id.outputs.project_id }}
-    #   env:
-    #     GH_TOKEN: ${{ steps.generate-token.outputs.token }}
+    - name: Change the status to Deployed 🚀
+      run: |
+        gh project item-edit \
+        --id ${{ steps.project_item_id.outputs.project_item_id }} \
+        --field-id ${{ steps.status_field_id.outputs.status_field_id }} \
+        --text "Deployed 🚀" \
+        --project-id ${{ steps.project_id.outputs.project_id }}
+      env:
+        GH_TOKEN: ${{ steps.generate-token.outputs.token }}
