--- a/.github/workflows/deploy_infra.yml
+++ b/.github/workflows/deploy_infra.yml
@@ -219,7 +219,10 @@ jobs:
       id: status_field_id
       run: |
         STATUS_FIELD_ID=$(gh project field-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq '.fields[] | select(.name == "Status") | .id')
+        # gh project field-list 8 --owner returngis --format json | jq  '.fields[] |  select(.name == "Status") | .options[] | select(.name == "Deployed 🚀") | .id'
+        DEPLOYED_STATUS_ID=$(gh project field-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq  '.fields[] |  select(.name == "Status") | .options[] | select(.name == "Deployed 🚀") | .id')
         echo "::set-output name=status_field_id::$STATUS_FIELD_ID"
+        echo "::set-output name=deployed_status_id::$DEPLOYED_STATUS_ID"
       env:
         GH_TOKEN: ${{ steps.generate-token.outputs.token }}
 
@@ -228,13 +231,14 @@ jobs:
         echo "Project ID: ${{ steps.project_id.outputs.project_id }}"
         echo "Project Item ID: ${{ steps.project_item_id.outputs.project_item_id }}"
         echo "Status Field ID: ${{ steps.status_field_id.outputs.status_field_id }}"
+        echo "Deployed Status ID: ${{ steps.status_field_id.outputs.deployed_status_id }}"
 
     - name: Change the status to Deployed 🚀
       run: |
         gh project item-edit \
         --id ${{ steps.project_item_id.outputs.project_item_id }} \
         --field-id ${{ steps.status_field_id.outputs.status_field_id }} \
-        --text "Deployed 🚀" \
+        --single-select-option-id ${{ steps.status_field_id.outputs.deployed_status_id }} \
         --project-id ${{ steps.project_id.outputs.project_id }}
       env:
         GH_TOKEN: ${{ steps.generate-token.outputs.token }}
