Update inactive_issues workflow: set close-issue-reason to completed

--- a/.github/workflows/inactive_issues.yml
+++ b/.github/workflows/inactive_issues.yml
@@ -12,6 +12,7 @@ jobs:
     steps:
       - uses: actions/stale@v9
         with:
+          close-issue-reason: completed
           days-before-issue-stale: 1
           days-before-issue-close: 2
           stale-issue-label: "stale"
