Refactor issue templates and workflows: rename 'region' to 'location', update assignees, and enhance label handling

--- a/.github/ISSUE_TEMPLATE/kubernetes_form.yml
+++ b/.github/ISSUE_TEMPLATE/kubernetes_form.yml
@@ -25,7 +25,7 @@ body:
     validations:
       required: true
   - type: dropdown
-    id: region
+    id: location
     attributes:
       label: Region
       multiple: false
