--- a/.github/workflows/deploy_infra.yml
+++ b/.github/workflows/deploy_infra.yml
@@ -111,9 +111,22 @@ jobs:
         action: remove
         issue_number: ${{ github.event.issue.number }}
         labels: |
-          requested 👆🏻⌛️         
+          requested 👆🏻⌛️ 
+    
+    # If Terraform apply fails, add the label "failed"
+
+    - name: Add Labels
+      if: ${{ failure() }} 
+      id: add-labels
+      uses: issue-ops/labeler@v2.1.0
+      with:
+        action: add
+        issue_number: ${{ github.event.issue.number }}
+        labels: |
+          failed 🚀💥         
 
     - name: Add Labels 
+      if: ${{ success() }}
       id: add-labels
       uses: issue-ops/labeler@v2.1.0
       with:
@@ -127,62 +140,7 @@ jobs:
       uses: actions/create-github-app-token@v1
       with:
         app-id: ${{ secrets.ISSUE_OPS_APP_ID }}
-        private-key: ${{ secrets.ISSUE_OPS_APP_PEM }}
-    
-
-    # - name: Get project ID using GraphQL
-    #   run: |
-    #     query='
-    #     {
-    #       organization(login: "returngis") {
-    #         projectV2(number: 8) {
-    #           id
-    #         }
-    #       }
-    #     }'
-    #     response=$(gh api graphql -f query="$query")
-    #     project_id=$(echo "$response" | jq -r '.data.organization.projectV2.id')
-    #     echo "Project ID: $project_id"
-    #   env:
-    #     GH_TOKEN: ${{ steps.generate-token.outputs.token }}
-
-    # - name: Get the project item ID using GraphQL
-    #   run: |
-    #     query='
-    #     {
-    #       organization(login: "returngis") {
-    #         projectV2(number: 8) {
-    #           id
-    #           items(first: 100) {
-    #             nodes {
-    #               id
-    #               content {
-    #                 ... on Issue {
-    #                   number
-    #                 }
-    #                 ... on PullRequest {
-    #                   number
-    #                 }
-    #               }
-    #             }
-    #           }
-    #         }
-    #       }
-    #     }'
-    #     # response=$(gh api graphql -f query="$query")
-    #     # project_item_id=$(echo "$response" | jq -r '.data.organization.projectV2.items.nodes[] | select(.content.number == ${{ github.event.issue.number }}) | .id')
-    #     # echo "Project Item ID: $project_item_id"
-
-    #     response=$(gh api graphql -f query="$query")
-    #     echo $response
-
-    #   env:
-    #     GH_TOKEN: ${{ steps.generate-token.outputs.token }}
-
-
-    # - name: Check issue number
-    #   run: |
-    #     echo "Issue number: ${{ github.event.issue.number }}"
+        private-key: ${{ secrets.ISSUE_OPS_APP_PEM }}      
     
     - name: Get the project ID and put as an output
       id: project_id
@@ -233,7 +191,23 @@ jobs:
         echo "Status Field ID: ${{ steps.status_field_id.outputs.status_field_id }}"
         echo "Deployed Status ID: ${{ steps.status_field_id.outputs.deployed_status_id }}"
 
+
+    - name: Change the status to Failed 🚀💥
+      if: ${{ failure() }} 
+      run: |
+
+        DEPLOYED_STATUS_ID=$(gh project field-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq  '.fields[] |  select(.name == "Status") | .options[] | select(.name == "Failed 🚀💥") | .id')
+
+        gh project item-edit \
+        --id ${{ steps.project_item_id.outputs.project_item_id }} \
+        --field-id ${{ steps.status_field_id.outputs.status_field_id }} \
+        --single-select-option-id ${{ steps.status_field_id.outputs.deployed_status_id }} \
+        --project-id ${{ steps.project_id.outputs.project_id }}
+      env:
+        GH_TOKEN: ${{ steps.generate-token.outputs.token }}
+
     - name: Change the status to Deployed 🚀
+      if: ${{ success() }} 
       run: |
         gh project item-edit \
         --id ${{ steps.project_item_id.outputs.project_item_id }} \
