--- a/.github/workflows/deploy_infra.yml
+++ b/.github/workflows/deploy_infra.yml
@@ -144,30 +144,31 @@ jobs:
     - name: Get the project ID and put as an output
       id: project_id
       run: |
-        PROJECT_ID=$(gh project view ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq .id)
-        echo "::set-output name=project_id::$PROJECT_ID"
+        PROJECT_ID=$(gh project view ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq .id)        
+        echo "project_id=$PROJECT_ID" >> $GITHUB_OUTPUT
       env:
         GH_TOKEN: ${{ steps.generate-token.outputs.token }}
 
-    - name: Check issue in the project
-      run: |
-        gh project item-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json
-      env:
-        GH_TOKEN: ${{ steps.generate-token.outputs.token }}
+    # - name: Check issue in the project
+    #   run: |
+    #     gh project item-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json
+    #   env:
+    #     GH_TOKEN: ${{ steps.generate-token.outputs.token }}
 
 
-    - name: See issue number ${{ github.event.issue.number }}
-      run: |
-         gh project item-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq '.items[] | select(.content.number == ${{ github.event.issue.number }})'
-      env:
-        GH_TOKEN: ${{ steps.generate-token.outputs.token }}
+    # - name: See issue number ${{ github.event.issue.number }}
+    #   run: |
+    #     # gh project item-list 8 --owner returngis --format json --limit 41 | jq '.items[] | select(.content.number == 41)'
+    #     gh project item-list ${{ env.PROJECT_NUMBER }} --limit ${{ github.event.issue.number }} --owner ${{ env.ORG_NAME }} --format json | jq '.items[] | select(.content.number == ${{ github.event.issue.number }})'
+    #   env:
+    #     GH_TOKEN: ${{ steps.generate-token.outputs.token }}
 
 
     - name: Get the project item ID and put as an output
       id: project_item_id
       run: |       
         ISSUE_IN_PROJECT_ID=$(gh project item-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq '.items[] | select(.content.number == ${{ github.event.issue.number }})' | jq .id)
-        echo "::set-output name=project_item_id::$ISSUE_IN_PROJECT_ID"
+        echo "project_item_id=$ISSUE_IN_PROJECT_ID" >> $GITHUB_OUTPUT
       env:
         GH_TOKEN: ${{ steps.generate-token.outputs.token }}
 
@@ -175,11 +176,7 @@ jobs:
     - name : Get the status field ID and put as an output
       id: status_field_id
       run: |
-        STATUS_FIELD_ID=$(gh project field-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq '.fields[] | select(.name == "Status") | .id')
-        # gh project field-list 8 --owner returngis --format json | jq  '.fields[] |  select(.name == "Status") | .options[] | select(.name == "Deployed 🚀") | .id'
-        DEPLOYED_STATUS_ID=$(gh project field-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq  '.fields[] |  select(.name == "Status") | .options[] | select(.name == "Deployed 🚀") | .id')
-        echo "::set-output name=status_field_id::$STATUS_FIELD_ID"
-        echo "::set-output name=deployed_status_id::$DEPLOYED_STATUS_ID"
+        STATUS_FIELD_ID=$(gh project field-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq '.fields[] | select(.name == "Status") | .id')               
       env:
         GH_TOKEN: ${{ steps.generate-token.outputs.token }}
 
@@ -187,20 +184,19 @@ jobs:
       run: |
         echo "Project ID: ${{ steps.project_id.outputs.project_id }}"
         echo "Project Item ID: ${{ steps.project_item_id.outputs.project_item_id }}"
-        echo "Status Field ID: ${{ steps.status_field_id.outputs.status_field_id }}"
-        echo "Deployed Status ID: ${{ steps.status_field_id.outputs.deployed_status_id }}"
+        echo "Status Field ID: ${{ steps.status_field_id.outputs.status_field_id }}"       
 
 
     - name: Change the status to Failed 🚀💥
       if: ${{ failure() }} 
       run: |
 
-        DEPLOYED_STATUS_ID=$(gh project field-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq  '.fields[] |  select(.name == "Status") | .options[] | select(.name == "Failed 🚀💥") | .id')
+        FAILED_STATUS_ID=$(gh project field-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq  '.fields[] |  select(.name == "Status") | .options[] | select(.name == "Failed 🚀💥") | .id')
 
         gh project item-edit \
         --id ${{ steps.project_item_id.outputs.project_item_id }} \
         --field-id ${{ steps.status_field_id.outputs.status_field_id }} \
-        --single-select-option-id ${{ steps.status_field_id.outputs.deployed_status_id }} \
+        --single-select-option-id $FAILED_STATUS_ID \
         --project-id ${{ steps.project_id.outputs.project_id }}
       env:
         GH_TOKEN: ${{ steps.generate-token.outputs.token }}
@@ -208,10 +204,13 @@ jobs:
     - name: Change the status to Deployed 🚀
       if: ${{ success() }} 
       run: |
+
+       DEPLOYED_STATUS_ID=$(gh project field-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq  '.fields[] |  select(.name == "Status") | .options[] | select(.name == "Deployed 🚀") | .id')
+
         gh project item-edit \
         --id ${{ steps.project_item_id.outputs.project_item_id }} \
         --field-id ${{ steps.status_field_id.outputs.status_field_id }} \
-        --single-select-option-id ${{ steps.status_field_id.outputs.deployed_status_id }} \
+        --single-select-option-id $DEPLOYED_STATUS_ID \
         --project-id ${{ steps.project_id.outputs.project_id }}
       env:
         GH_TOKEN: ${{ steps.generate-token.outputs.token }}
