Update devcontainer and deploy_infra workflow: add Azure Resource Groups and GitHub Actions extensions, and adjust project item ID retrieval command

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,7 +18,9 @@
 				"redhat.vscode-yaml",
 				"GitHub.copilot",
 				"GitHub.copilot-chat",
-				"hashicorp.terraform"
+				"hashicorp.terraform",
+				"ms-azuretools.vscode-azureresourcegroups",
+				"github.vscode-github-actions"
 			]
 		}
 	}
