--- a/.github/workflows/deploy_infra.yml
+++ b/.github/workflows/deploy_infra.yml
@@ -167,7 +167,7 @@ jobs:
     - name: Get the project item ID and put as an output
       id: project_item_id
       run: |       
-        ISSUE_IN_PROJECT_ID=$(gh project item-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq '.items[] | select(.content.number == ${{ github.event.issue.number }})' | jq .id)
+        ISSUE_IN_PROJECT_ID=$(gh project item-list ${{ env.PROJECT_NUMBER }}  --limit ${{ github.event.issue.number }} --owner ${{ env.ORG_NAME }} --format json | jq '.items[] | select(.content.number == ${{ github.event.issue.number }})' | jq .id)
         echo "project_item_id=$ISSUE_IN_PROJECT_ID" >> $GITHUB_OUTPUT
       env:
         GH_TOKEN: ${{ steps.generate-token.outputs.token }}
